WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116637
[Mac] accessibility/selection-states.html fails
https://bugs.webkit.org/show_bug.cgi?id=116637
Summary
[Mac] accessibility/selection-states.html fails
Ryosuke Niwa
Reported
2013-05-22 14:39:28 PDT
accessibility/selection-states.html fails: --- /Volumes/Data/webkit3/WebKitBuild/Debug/layout-test-results/accessibility/selection-states-expected.txt +++ /Volumes/Data/webkit3/WebKitBuild/Debug/layout-test-results/accessibility/selection-states-actual.txt @@ -2,10 +2,10 @@ This tests that we report the correct selection-related states. -PASS accessibilityController.focusedElement.isMultiSelectable is true -PASS accessibilityController.focusedElement.childAtIndex(0).isSelectable is true +FAIL accessibilityController.focusedElement.isMultiSelectable should be true. Was false. +FAIL accessibilityController.focusedElement.childAtIndex(0).isSelectable should be true. Was false. PASS accessibilityController.focusedElement.childAtIndex(0).isSelected is true -PASS accessibilityController.focusedElement.childAtIndex(1).isSelectable is true +FAIL accessibilityController.focusedElement.childAtIndex(1).isSelectable should be true. Was false. PASS accessibilityController.focusedElement.childAtIndex(1).isSelected is false PASS accessibilityController.focusedElement.childAtIndex(2).isSelectable is false PASS accessibilityController.focusedElement.childAtIndex(2).isSelected is false
Attachments
patch
(6.40 KB, patch)
2015-08-21 10:02 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-05-22 14:40:00 PDT
The comment in TestExpectations said we're missing missing AccessibilityController functionality.
Radar WebKit Bug Importer
Comment 2
2014-02-07 11:31:07 PST
<
rdar://problem/16014063
>
Nan Wang
Comment 3
2015-08-21 09:50:25 PDT
***
Bug 148277
has been marked as a duplicate of this bug. ***
Nan Wang
Comment 4
2015-08-21 10:02:00 PDT
Created
attachment 259623
[details]
patch
WebKit Commit Bot
Comment 5
2015-08-21 11:26:34 PDT
Comment on
attachment 259623
[details]
patch Clearing flags on attachment: 259623 Committed
r188759
: <
http://trac.webkit.org/changeset/188759
>
WebKit Commit Bot
Comment 6
2015-08-21 11:26:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug